# openhelm

./: .env.example  .gitignore  .ignore  .mcp.json  .vercelignore  CHANGELOG.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  sentry.properties  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
agent/: package.json  test-e2e-temp.mjs  tsconfig.tsbuildinfo
docs/: e2e-issues.md  goal_hierarchy_kpi_pipeline_and_chat_tools.md  plan_13b_cloud_voice_chat.md  plan_1_v1.md  plan_2_inbox_triage_hitl.md  plan_3_memory_system.md  plan_4_autopilot.md  plan_8_data_visualizations.md  plan_9_goal_hierarchy_and_chat_tools.md  prd.md
e2b/: .env.example  .gitignore  Dockerfile  build.sh  e2b.toml
reports/: reddit-mention-monitor.md
scripts/: add-posthog-credentials.mjs  fetch-brand-icons.mjs  fly-logs-tail.mjs  patch-bundle.mjs  reset-demo.sh
src/: App.tsx  main.tsx  (+2 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mcp-servers/browser/: requirements.txt
src-tauri/mcp-servers/browser/src/: accessibility_handler.py  behavior.py  browser_manager.py  captcha_detector.py  captcha_llm_fallback.py  dom_handler.py  intervention.py  macos_background.py  process_cleanup.py  profile_manager.py  server.py  stealth.py  tool_timeout.py
src-tauri/mcp-servers/browser/src/js/: stealth_behavioral.js  stealth_core.js  stealth_fingerprint.js  stealth_network_api.js  stealth_webgpu.js
src-tauri/mcp-servers/browser/tests/: test_input_verification.py  test_instance_not_found_and_navigate_error.py  test_profile_lock_reconcile.py
src-tauri/src/: focus_guard.rs  lib.rs
(+683 files in other folders)
